Adding masters degree

--- a/index.html
+++ b/index.html
@@ -141,9 +141,14 @@
 			
 			<div class="content">
 			
+				<h4>University of Maryland at Shady Grove</h4>
+				<p>
+					M.S. in Information Technology
+				</p>
+			
 				<h4>University of Maryland, Baltimore County</h4>
 				<p>
-					Bachelor of Science in Information Systems<br />
+					B.S. in Information Systems<br />
 					MHEC Web Development Certificate
 				</p>
 				
