adding graduation dates

--- a/index.html
+++ b/index.html
@@ -143,13 +143,15 @@
 			
 				<h4>University of Maryland at Shady Grove</h4>
 				<p>
-					M.S. in Information Technology
+					M.S. in Information Technology<br/>
+					Completed December 2020
 				</p>
 			
 				<h4>University of Maryland, Baltimore County</h4>
 				<p>
 					B.S. in Information Systems<br />
-					MHEC Web Development Certificate
+					MHEC Web Development Certificate<br/>
+					Completed May 2011
 				</p>
 				
 				<h4>Montgomery College</h4>
