Decreasing padding between menu divs

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		  </ul>
 		</nav>
 
-		<div id="about" class="container-fluid bg-light" style="padding-top:70px;padding-bottom:70px">
+		<div id="about" class="container-fluid bg-light">
 			<h1 class="alert-info">About Me</h1>
 			
 			<div class="content">
@@ -64,7 +64,7 @@
 			</div>
 
 		</div>
-		<div id="skills" class="container-fluid bg-light" style="padding-top:70px;padding-bottom:70px">
+		<div id="skills" class="container-fluid bg-light">
 			<h1 class="alert-info">Skills</h1>
 			
 			<div class="container">
@@ -84,7 +84,7 @@
 			</div>
 
 		</div>
-		<div id="experience" class="container-fluid bg-light" style="padding-top:70px;padding-bottom:70px">
+		<div id="experience" class="container-fluid bg-light">
 			<h1 class="alert-info">Professional Experience</h1>
 			
 			<div class="content">
@@ -136,7 +136,7 @@
 			</div>
 
 		</div>
-		<div id="education" class="container-fluid bg-light" style="padding-top:70px;padding-bottom:70px">
+		<div id="education" class="container-fluid bg-light">
 			<h1 class="alert-info">Education</h1>
 			
 			<div class="content">
@@ -160,7 +160,7 @@
 			</div>
 			
 		</div>
-		<div id="contact" class="container-fluid bg-light" style="padding-top:70px;padding-bottom:70px">
+		<div id="contact" class="container-fluid bg-light">
 		
 			<h1 class="alert-info">Contact</h1>
 			
